# gfx_algorithms

./: .gitignore  CMakeLists.txt
inc/: geometry.hpp  input.hpp  render.hpp  window.hpp
src/: main.cpp
